Unconditionally return when the password form is still visible

BUG=728028
R=dvadym@chromium.org,kolos@chromium.org

Change-Id: I3500a44b7ebbf2d489705930d687f2dd2d97dd86
Reviewed-on: https://chromium-review.googlesource.com/522067
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476660}
Former-commit-id: c5787e3c4df8dc3dbcd6f23b59b830ad63152899